# fincomp-engine

./: 1  Dockerfile  README.md  coverage.out  go.mod  tags
client/dotnet/: .gitignore  1  GoalSeekApiClient.csproj  GoalSeekApiTests.cs  Program.cs  readme.md
cmd/server/: main.go
experiments/haskell/: Dockerfile  Main.hs  finmodel-api.cabal  finmodel_v2  finmodel_v2.hi  finmodel_v2.hs  goakseekapi.hs
experiments/haskell/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
experiments/lisp/: financial_calculator.lisp
experiments/tryRust/financial_model/: tags
experiments/tryRust/rust/: Cargo.toml
experiments/tryRust/rust/src/: main.rs  (+2 more)
experiments/tryada/: 1  financial_calculator  financial_calculator - withlb.adb  financial_calculator.ali  financial_calculator_v1.adb  hello
experiments/trypython/: fin_experiment.py  finmodel.py  finmodel_v2.py  finmodel_v3.py  finmodel_v4.py  finmodel_v5.py  test_lint.py
experiments/tryzig/: 1  financial_calculator  financial_calculator.zig  financial_calculator_v2  financial_calculator_v2.zig
internal/api/: handlers.go  handlers_test.go  server.go
internal/financials/: calculations.go  calculations_test.go  compute_engine.go  financial_calculator.go  params.go
internal/goalseek/: goalseek.go  goalseek_benchmark_test.go  goalseek_test.go
internal/runout/: 1  cpu.out  mem.out  runout.go  runout.test  runout_benchmark_test.go  runout_params.go  runout_test.go
migration/: ruby.py
pkg/testutils/: testutils.go
postman/: postmancollection.json
(+3 files in other folders)
