name:                finmodel-api
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable finmodel-api
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , servant-server
                     , servant
                     , warp
                     , aeson
                     , time
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
